--- a/principal/templates/index.html
+++ b/principal/templates/index.html
@@ -50,12 +50,12 @@
       <nav id="navbar" class="nav-menu navbar">
         <ul>
           <li><a href="#hero" class="nav-link scrollto active"><i class="bx bx-home"></i> <span>Inicio</span></a></li>
+          <li><a href="#contact" class="nav-link scrollto"><i class="bx bx-cube-alt"></i> <span>Resumen Ejecutivo</span></a></li>
           <li><a href="#about" class="nav-link scrollto"><i class="bx bx-user"></i> <span>Repositorio Regional</span></a></li>
           <li><a href="#portfolio" class="nav-link scrollto"><i class="bx bx-bar-chart-alt"></i> <span>Indicadores Sanitarios</span></a></li>
           <li><a href="#facts" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Padron Nominal</span></a></li>
           <li><a href="#services" class="nav-link scrollto"><i class="bx bx-vial"></i> <span>Vacunación</span></a></li>
           <li><a href="#testimonials" class="nav-link scrollto"><i class="bx bx-building"></i> <span>Hechos Vitales y SIHCE</span></a></li>
-          <li><a href="#contact" class="nav-link scrollto"><i class="bx bx-cube-alt"></i> <span>Modulos Regionales</span></a></li>
           <li><a href="https://glacial-coast-00858.herokuapp.com/" class="nav-link scrollto"><i class="bx bx-abacus"></i> <span>Plataforma DIT</span></a></li>
         </ul>
       </nav><!-- .nav-menu -->
@@ -74,6 +74,48 @@
   <!-- End Hero -->
 
   <main id="main">
+  <!-- ======= RESUMEN REGIONAL ======= -->
+    <section id="contact" class="contact">
+    <div class="container">
+      <div class="section-title">
+        <h2>Resumen Ejecutivo</h2>
+        <p>Principales Indicadores de Salud</p>
+      </div>
+      <div class="row" data-aos="fade-in">
+        <div class="col-lg-6 d-flex align-items-stretch">
+          <div class="info">
+            <div class="address">
+              <i class="bi bi-eyedropper"></i>
+              <h4>Indicadores de Desempeño y Compromiso de Mejora</h4>
+              <a href="https://app.powerbi.com/view?r=eyJrIjoiY2QyOTBkM2UtNWQyMS00NTBkLTlkMmItNGFlZGMyYzBkMTBhIiwidCI6ImQxYzM1MDFkLWE2MWUtNGJiYi04NDdhLWQ5NDRiZmFlOGRiMCIsImMiOjR9" target="_blank"><p>Indicadores de Desempeño y Compromiso de Mejora</p></a>
+            </div>
+
+            <div class="email">
+              <i class="bi bi-puzzle"></i>
+              <h4>Indicadores de Compromiso de Gestion FED</h4>
+              <a href="https://app.powerbi.com/view?r=eyJrIjoiNDFiYzAyM2ItMTQ5Yy00ZmJiLWE1Y2MtNDczNjg3MjVmZDVhIiwidCI6ImQxYzM1MDFkLWE2MWUtNGJiYi04NDdhLWQ5NDRiZmFlOGRiMCIsImMiOjR9" target="_blank"><p>Indicadores de Compromiso de Gestion FED</p></a>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-6 d-flex align-items-stretch">
+          <div class="info">
+            <div class="phone">
+              <i class="bi bi-phone"></i>       
+              <h4>Indicadores de Recursos Humanos segun PLH</h4>
+              <a href="https://app.powerbi.com/view?r=eyJrIjoiNGE3NWQwOWUtZDZiYy00NzEzLWFlZGUtZWU4N2U5MDVjNGM4IiwidCI6ImQxYzM1MDFkLWE2MWUtNGJiYi04NDdhLWQ5NDRiZmFlOGRiMCIsImMiOjR9" target="_blank"><p>Indicadores de Recursos Humanos segun PLH</p></a>
+            </div>
+
+            <div class="address">
+              <i class="bi bi-building"></i>
+              <h4>Indicadores de Ejecucion Presupuestal</h4>
+                <a href="https://app.powerbi.com/view?r=eyJrIjoiMzMwNjU2YmMtYjM5MC00OWE3LWIzZDYtMGU3MmRlNjk4Y2EyIiwidCI6ImQxYzM1MDFkLWE2MWUtNGJiYi04NDdhLWQ5NDRiZmFlOGRiMCIsImMiOjR9" target="_blank"><p>Indicadores de Ejecucion Presupuestal</p></a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    </section>
+  <!-- End Contact Section -->
 
   <!-- ======= About Section REPOSITORIO======= -->
     <section id="about" class="services">
@@ -260,8 +302,8 @@
       </div>
     </section><!-- End Services Section -->
 
-    <!-- ======= Testimonials Section SIHCE ======= -->
-    <section id="testimonials" class="testimonials section-bg">
+  <!-- ======= Testimonials Section SIHCE ======= -->
+  <section id="testimonials" class="testimonials section-bg">
       <div class="container">
 
         <div class="section-title">
@@ -373,72 +415,9 @@
         </div>
 
       </div>
-    </section><!-- End Testimonials Section -->
+  </section><!-- End Testimonials Section -->
 
-    <!-- ======= Contact Section ======= -->
-    <section id="contact" class="contact">
-      <div class="container">
 
-        <div class="section-title">
-          <h2>Modulos Regionales</h2>
-          <p>Primera Infancia, Odontologo por Colegio y Psicologo por colegio</p>
-        </div>
-
-        <div class="row" data-aos="fade-in">
-
-          <div class="col-lg-6 d-flex align-items-stretch">
-            <div class="info">
-              <div class="address">
-                <i class="bi bi-eyedropper"></i>
-                <h4>Primero la Infancia - Paquete N° 01</h4>
-                <a href="https://app.powerbi.com/view?r=eyJrIjoiNDM2ODYxNDMtZmRhNy00YjY2LWEyMzAtODFlOThhZTA5YWQ0IiwidCI6ImQxYzM1MDFkLWE2MWUtNGJiYi04NDdhLWQ5NDRiZmFlOGRiMCIsImMiOjR9" target="_blank"><p>Paquete Gestante</p></a>
-              </div>
-
-              <div class="email">
-                <i class="bi bi-puzzle"></i>
-                <h4>Primero la Infancia - Paquete N° 02</h4>
-                <a href="https://app.powerbi.com/view?r=eyJrIjoiZDVhMWJlODgtMWE5Yi00NjQwLWI3ZGItMTFhN2I0ZDhmMDE3IiwidCI6ImQxYzM1MDFkLWE2MWUtNGJiYi04NDdhLWQ5NDRiZmFlOGRiMCIsImMiOjR9" target="_blank"><p>Paquete Niño</p></a>
-              </div>
-
-              <div class="phone">
-                <i class="bi bi-phone"></i>       
-                <a href="https://app.powerbi.com/view?r=eyJrIjoiYTgyMGMzMTUtZTlkZC00YmUxLTliYjAtOWZjYjE3ZDU2YmRmIiwidCI6ImQxYzM1MDFkLWE2MWUtNGJiYi04NDdhLWQ5NDRiZmFlOGRiMCIsImMiOjR9" target="_blank"><h4>Tablero Padron Nominal</h4></a>
-              </div>
-            </div>
-
-          </div>
-
-          <div class="col-lg-6 d-flex align-items-stretch">
-              <div class="info">
-                <div class="address">
-                  <i class="bi bi-building"></i>
-                  <h4>Odontologo por Colegio</h4>
-                  <p>
-                    <a href="https://app.powerbi.com/view?r=eyJrIjoiOTk0MjM4ZmEtM2JlOS00YTJhLWI5NWYtOGNkNDcwZjlmMWJhIiwidCI6ImQxYzM1MDFkLWE2MWUtNGJiYi04NDdhLWQ5NDRiZmFlOGRiMCIsImMiOjR9" target="_blank">Tablero de control</a>
-                  </p>
-                </div>
-  
-                <div class="email">
-                  <i class="bi bi-building"></i>
-                  <h4>Psicologo por Colegio</h4>
-                  <p>
-                    <a href="#">Tablero de control</a>
-                  </p>
-                </div>
-  
-                <div class="phone">
-                  <i class="bi bi-phone"></i>
-                  <a href="http://diresahis.ga/" target="_blank">
-                    <h4>Consulta HIS-MINSA</h4>
-                  </a>
-                </div>
-              </div>
-          </div>
-
-        </div>
-
-      </div>
-    </section><!-- End Contact Section -->
 
   </main><!-- End #main -->
 
