--- a/principal/templates/index.html
+++ b/principal/templates/index.html
@@ -1,52 +1,40 @@
 {% load static %}
-
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-
   <title>Plataforma de Información Salud Junin</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
-
   <!-- Favicons -->
   <link href="{% static 'assets/img/favicon.png' %}" rel="icon">
   <link href="{% static 'assets/img/apple-touch-icon.png' %}" rel="apple-touch-icon">
-
   <!-- Google Fonts -->
   <link
     href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i"
     rel="stylesheet">
-
   <!-- Vendor CSS Files -->
-
   <link href="{% static 'assets/vendor/aos/aos.css' %}" rel="stylesheet">
   <link href="{% static 'assets/vendor/bootstrap/css/bootstrap.min.css' %}" rel="stylesheet">
   <link href="{% static 'assets/vendor/bootstrap-icons/bootstrap-icons.css' %}" rel="stylesheet">
   <link href="{% static 'assets/vendor/boxicons/css/boxicons.min.css' %}" rel="stylesheet">
   <link href="{% static 'assets/vendor/glightbox/css/glightbox.min.css' %}" rel="stylesheet">
   <link href="{% static 'assets/vendor/swiper/swiper-bundle.min.css' %}" rel="stylesheet">
-
   <!-- Template Main CSS File -->
   <link href="{% static 'assets/css/style.css' %}" rel="stylesheet">
 </head>
 
 <body>
-
   <!-- ======= Mobile nav toggle button ======= -->
   <i class="bi bi-list mobile-nav-toggle d-xl-none"></i>
-
   <!-- ======= Header ======= -->
   <header id="header">
     <div class="d-flex flex-column">
-
       <div class="profile">
         <img src="{% static 'assets/img/profile-img-ok3.jpg' %}" alt="" class="img-fluid rounded-circle">
         <h1 class="text-light"><a href="index.html">SALUD JUNIN</a></h1>
       </div>
-
       <nav id="navbar" class="nav-menu navbar">
         <ul>
           <li><a href="#hero" class="nav-link scrollto active"><i class="bx bx-home"></i> <span>Inicio</span></a></li>
@@ -61,28 +49,26 @@
       </nav><!-- .nav-menu -->
     </div>
   </header><!-- End Header -->
-
   <!-- ======= Hero Section ======= -->
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
     <div class="hero-container" data-aos="fade-in">
       <h1>Estadistica e Informatica</h1>
       <p>OTI - <span class="typed"
-          data-typed-items="Sistemas de Información, Gestión de la Información, Disponibilidad y Calidad, Difusion y publicación"></span>
+          data-typed-items="Sistemas de Información, Gestión de la Información, Disponibilidad y Calidad, Difusion y Publicación"></span>
       </p>
     </div>
   </section>
   <!-- End Hero -->
-
   <main id="main">
   <!-- ======= RESUMEN REGIONAL ======= -->
     <section id="contact" class="contact">
-    <div class="container">
-      <div class="section-title">
+      <div class="container">
+        <div class="section-title">
         <h2>Resumen Ejecutivo</h2>
         <p>Principales Indicadores de Salud</p>
-      </div>
-      <div class="row" data-aos="fade-in">
-        <div class="col-lg-6 d-flex align-items-stretch">
+        </div>
+        <div class="row" data-aos="fade-in">
+          <div class="col-lg-6 d-flex align-items-stretch">
           <div class="info">
             <div class="address">
               <i class="bi bi-eyedropper"></i>
@@ -96,8 +82,8 @@
               <a href="https://app.powerbi.com/view?r=eyJrIjoiNDFiYzAyM2ItMTQ5Yy00ZmJiLWE1Y2MtNDczNjg3MjVmZDVhIiwidCI6ImQxYzM1MDFkLWE2MWUtNGJiYi04NDdhLWQ5NDRiZmFlOGRiMCIsImMiOjR9" target="_blank"><p>Indicadores de Compromiso de Gestion FED</p></a>
             </div>
           </div>
-        </div>
-        <div class="col-lg-6 d-flex align-items-stretch">
+          </div>
+          <div class="col-lg-6 d-flex align-items-stretch">
           <div class="info">
             <div class="phone">
               <i class="bi bi-phone"></i>       
@@ -111,12 +97,11 @@
                 <a href="https://app.powerbi.com/view?r=eyJrIjoiMzMwNjU2YmMtYjM5MC00OWE3LWIzZDYtMGU3MmRlNjk4Y2EyIiwidCI6ImQxYzM1MDFkLWE2MWUtNGJiYi04NDdhLWQ5NDRiZmFlOGRiMCIsImMiOjR9" target="_blank"><p>Indicadores de Ejecucion Presupuestal</p></a>
             </div>
           </div>
+          </div>
         </div>
       </div>
-    </div>
     </section>
-  <!-- End Contact Section -->
-
+    <!-- End Contact Section -->
   <!-- ======= About Section REPOSITORIO======= -->
     <section id="about" class="services">
       <div class="container">
@@ -145,8 +130,8 @@
         </div>
 
       </div>
-    </section><!-- End About Section -->
-
+    </section>
+    <!-- End About Section -->
   <!-- ======= Portfolio Section INDICADORES ======= -->
     <section id="portfolio" class="portfolio section-bg">
           <div class="container">
@@ -183,8 +168,8 @@
             </div>
     
           </div>
-    </section><!-- End Portfolio Section -->
-
+    </section>
+    <!-- End Portfolio Section -->
   <!-- ======= Facts Section PADRON NOMINAL ======= -->
     <section id="facts" class="facts">
       <div class="container">
@@ -253,8 +238,8 @@
         </div>
 
       </div>
-    </section><!-- End Facts Section -->
-
+    </section>
+    <!-- End Facts Section -->
   <!-- ======= Services Section VACUNACION======= -->
     <section id="services" class="services">
       <div class="container">
@@ -301,9 +286,9 @@
 
       </div>
     </section><!-- End Services Section -->
-
+    <!-- End Services Section -->
   <!-- ======= Testimonials Section SIHCE ======= -->
-  <section id="testimonials" class="testimonials section-bg">
+    <section id="testimonials" class="testimonials section-bg">
       <div class="container">
 
         <div class="section-title">
@@ -415,25 +400,21 @@
         </div>
 
       </div>
-  </section><!-- End Testimonials Section -->
-
-
-
-  </main><!-- End #main -->
-
+    </section>
+    <!-- End Testimonials Section -->
+  </main>
+  <!-- End #main -->
   <!-- ======= Footer ======= -->
-  <footer id="footer">
+    <footer id="footer">
     <div class="container">
       <div class="credits">
         <!-- All the links in the footer should remain intact. -->
         &copy; <strong><span>Desarrollado por: </span></strong><a href="#">OTI</a>
       </div>
     </div>
-  </footer><!-- End  Footer -->
-
-  <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i
-      class="bi bi-arrow-up-short"></i></a>
-
+    </footer>
+  <!-- End  Footer -->
+  <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
   <!-- Vendor JS Files -->
   <script src="{% static 'assets/vendor/purecounter/purecounter.js' %}"></script>
   <script src="{% static 'assets/vendor/aos/aos.js' %}"></script>
@@ -444,8 +425,6 @@
   <script src="{% static 'assets/vendor/typed.js/typed.min.js' %}"></script>
   <script src="{% static 'assets/vendor/waypoints/noframework.waypoints.js' %}"></script>
   <script src="{% static 'assets/vendor/php-email-form/validate.js' %}"></script>
-
   <!-- Template Main JS File -->
   <script src="{% static 'assets/js/main.js' %}"></script>
-
 </html>
