--- a/principal/templates/index.html
+++ b/principal/templates/index.html
@@ -185,26 +185,8 @@
           <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up">
             <div class="count-box">
               <img src="{% static 'assets/img/portfolio/padron_nominal.png' %}" class="img-fluid" alt="">
-                <a href="https://padronnominal.reniec.gob.pe/padronn/" target="_blank">
-                 Acceso al Sistema Padron Nominal
-              </a>
-            </div>
-          </div>
-
-          <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up">
-            <div class="count-box">
-              <img src="{% static 'assets/img/portfolio/padron_nominal.png' %}" class="img-fluid" alt="">
-                <a href="https://app.powerbi.com/view?r=eyJrIjoiYTgyMGMzMTUtZTlkZC00YmUxLTliYjAtOWZjYjE3ZDU2YmRmIiwidCI6ImQxYzM1MDFkLWE2MWUtNGJiYi04NDdhLWQ5NDRiZmFlOGRiMCIsImMiOjR9" target="_blank">
-                 Tablero de seguimiento del Sello Municipal, variables priorizados DIRESA, Meta 4
-              </a>
-            </div>
-          </div>
-
-          <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up">
-            <div class="count-box">
-              <img src="{% static 'assets/img/portfolio/padron_nominal.png' %}" class="img-fluid" alt="">
-                <a href="https://www.minsa.gob.pe/reunis/data/directorio_padron_nominal.asp" target="_blank">
-                Directorio Actualizado de Responsables del Padron Nominal 
+                <a href="https://padronnominal.herokuapp.com/" target="_blank">
+                 Plataforma Padron Nominal 2023
               </a>
             </div>
           </div>
@@ -213,7 +195,7 @@
             <div class="count-box">
               <img src="{% static 'assets/img/portfolio/padron_nominal.png' %}" class="img-fluid" alt="">            
                 <a href="https://public.tableau.com/profile/ogei.minsa.peru#!/vizhome/PADRON_NOMINAL_TOOLS/PN" target="_blank">
-                 Repositorio Nacional de Niños y Niñas no encontrados en el Padron Nominal
+                 Tablero Informativo del Padron Nominal
               </a>
             </div>
           </div> 
@@ -222,21 +204,11 @@
             <div class="count-box">
               <img src="{% static 'assets/img/portfolio/padron_nominal.png' %}" class="img-fluid" alt="">            
                 <a href="https://websalud.minsa.gob.pe/hisminsa/" target="_blank">
-                HIS MINSA - Seguimiento para la Padron Nominal
+                HIS MINSA - Seguimiento Nacional de apoyo al Padron Nominal
               </a>
             </div>
           </div>
           
-          <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up">
-            <div class="count-box">
-              <img src="{% static 'assets/img/portfolio/padron_nominal.png' %}" class="img-fluid" alt="">            
-                <a href="https://public.tableau.com/app/profile/ogei.minsa.peru/viz/Padron_Nominal/PadronNominal" target="_blank">
-                Tablero de Poblacion de niños menores de 6 años
-                </a>
-            </div>
-          </div>
-        </div>
-
       </div>
     </section>
     <!-- End Facts Section -->
