--- a/principal/templates/index.html
+++ b/principal/templates/index.html
@@ -208,6 +208,15 @@
               </a>
             </div>
           </div>
+
+          <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up">
+            <div class="count-box">
+              <img src="{% static 'assets/img/portfolio/padron_nominal.png' %}" class="img-fluid" alt="">            
+                <a href="https://websalud.minsa.gob.pe/hisminsa/" target="_blank">
+                Sello Municipal
+              </a>
+            </div>
+          </div>
           
       </div>
     </section>
