--- a/principal/templates/index.html
+++ b/principal/templates/index.html
@@ -67,6 +67,7 @@
         <h2>Resumen Ejecutivo</h2>
         <p>Principales Indicadores de Salud</p>
         </div>
+        
         <div class="row" data-aos="fade-in">
           <div class="col-lg-6 d-flex align-items-stretch">
           <div class="info">
@@ -81,8 +82,16 @@
               <h4>Indicadores de Compromiso de Gestion FED</h4>
               <a href="https://app.powerbi.com/view?r=eyJrIjoiNDFiYzAyM2ItMTQ5Yy00ZmJiLWE1Y2MtNDczNjg3MjVmZDVhIiwidCI6ImQxYzM1MDFkLWE2MWUtNGJiYi04NDdhLWQ5NDRiZmFlOGRiMCIsImMiOjR9" target="_blank"><p>Indicadores de Compromiso de Gestion FED</p></a>
             </div>
+
+            
+            <div class="email">
+              <i class="bi bi-card-checklist"></i>
+              <h4>Indicadores Sanitarios Priorizados</h4>
+              <a href="https://app.powerbi.com/view?r=eyJrIjoiYzljZmMzMDAtZTE5Zi00ZDQ4LWI5NjYtZmMzOTA2YWNhNWZhIiwidCI6ImQxYzM1MDFkLWE2MWUtNGJiYi04NDdhLWQ5NDRiZmFlOGRiMCIsImMiOjR9" target="_blank"><p>Indicadores Sanitarios Priorizados</p></a>
+            </div>
           </div>
           </div>
+          
           <div class="col-lg-6 d-flex align-items-stretch">
           <div class="info">
             <div class="phone">
@@ -95,6 +104,12 @@
               <i class="bi bi-building"></i>
               <h4>Indicadores de Ejecucion Presupuestal</h4>
                 <a href="https://app.powerbi.com/view?r=eyJrIjoiMzMwNjU2YmMtYjM5MC00OWE3LWIzZDYtMGU3MmRlNjk4Y2EyIiwidCI6ImQxYzM1MDFkLWE2MWUtNGJiYi04NDdhLWQ5NDRiZmFlOGRiMCIsImMiOjR9" target="_blank"><p>Indicadores de Ejecucion Presupuestal</p></a>
+            </div>
+
+            <div class="address">
+              <i class="bi bi-book"></i>
+              <h4>Boletin Estadistico</h4>
+                <a href="https://drive.google.com/file/d/171E7kS6n46kMnQmDwaExfKTt0wQDLGYK/view?usp=sharing" target="_blank"><p>Boletin Estadistico 2022</p></a>
             </div>
           </div>
           </div>
