--- a/principal/templates/index.html
+++ b/principal/templates/index.html
@@ -44,7 +44,7 @@
           <li><a href="#facts" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Padron Nominal</span></a></li>
           <li><a href="#services" class="nav-link scrollto"><i class="bx bx-vial"></i> <span>Vacunación</span></a></li>
           <li><a href="#testimonials" class="nav-link scrollto"><i class="bx bx-building"></i> <span>Hechos Vitales y SIHCE</span></a></li>
-          <li><a href="https://glacial-coast-00858.herokuapp.com/" class="nav-link scrollto"><i class="bx bx-abacus"></i> <span>Plataforma DIT</span></a></li>
+          <li><a href="#" class="nav-link scrollto"><i class="bx bx-abacus"></i> <span>Plataforma DIT</span></a></li>
         </ul>
       </nav><!-- .nav-menu -->
     </div>
@@ -165,7 +165,7 @@
                 <div class="portfolio-wrap">
                   <img src="{% static 'assets/img/portfolio/inicio_tratamiento.png' %}" class="img-fluid" alt="">
                   <div class="portfolio-links">
-                    <a href="http://saludjunin.ga" target="_blank">
+                    <a href="http://www.saludjunin.ml/" target="_blank">
                       <i class="bx bx-link"></i>
                       Portal de seguimiento de Indicadores
                     </a>
