--- a/principal/templates/index.html
+++ b/principal/templates/index.html
@@ -165,7 +165,7 @@
                 <div class="portfolio-wrap">
                   <img src="{% static 'assets/img/portfolio/inicio_tratamiento.png' %}" class="img-fluid" alt="">
                   <div class="portfolio-links">
-                    <a href="http://www.saludjunin.ml/" target="_blank">
+                    <a href="http://www.saludjunin.com/" target="_blank">
                       <i class="bx bx-link"></i>
                       Portal de seguimiento de Indicadores
                     </a>
