--- a/principal/templates/index.html
+++ b/principal/templates/index.html
@@ -111,6 +111,12 @@
               <h4>Boletin Estadistico</h4>
                 <a href="https://drive.google.com/file/d/171E7kS6n46kMnQmDwaExfKTt0wQDLGYK/view?usp=sharing" target="_blank"><p>Boletin Estadistico 2022</p></a>
             </div>
+
+            <div class="address">
+              <i class="bi bi-book"></i>
+              <h4>Establecimeintos de Salud</h4>
+                <a href="https://app.powerbi.com/view?r=eyJrIjoiY2JhZWU0NmMtMzU1ZS00NzdlLWI4ZTItYTVmZTUwMGY0OWY5IiwidCI6ImQxYzM1MDFkLWE2MWUtNGJiYi04NDdhLWQ5NDRiZmFlOGRiMCIsImMiOjR9" target="_blank"><p>Boletin Estadistico 2022</p></a>
+            </div>
           </div>
           </div>
         </div>
