--- a/principal/templates/index.html
+++ b/principal/templates/index.html
@@ -114,7 +114,7 @@
 
             <div class="address">
               <i class="bi bi-book"></i>
-              <h4>Establecimeintos de Salud</h4>
+              <h4>Establecimientos de Salud</h4>
                 <a href="https://app.powerbi.com/view?r=eyJrIjoiY2JhZWU0NmMtMzU1ZS00NzdlLWI4ZTItYTVmZTUwMGY0OWY5IiwidCI6ImQxYzM1MDFkLWE2MWUtNGJiYi04NDdhLWQ5NDRiZmFlOGRiMCIsImMiOjR9" target="_blank"><p>Boletin Estadistico 2022</p></a>
             </div>
           </div>
