--- a/principal/templates/index.html
+++ b/principal/templates/index.html
@@ -80,7 +80,7 @@
             <div class="email">
               <i class="bi bi-puzzle"></i>
               <h4>Indicadores de Compromiso de Gestion FED</h4>
-              <a href="https://app.powerbi.com/view?r=eyJrIjoiYmRjMmJlOTQtM2RiYy00ZGMyLWJiZGMtMDYwMGIzMTRhMGUyIiwidCI6ImQxYzM1MDFkLWE2MWUtNGJiYi04NDdhLWQ5NDRiZmFlOGRiMCIsImMiOjR9" target="_blank"><p>Indicadores de Compromiso de Gestion FED</p></a>
+              <a href="https://app.powerbi.com/view?r=eyJrIjoiMjgyZTEwZGMtZjBlMy00NjA1LWI0ZmQtZjI0ZDFkYTAzNWZkIiwidCI6ImQxYzM1MDFkLWE2MWUtNGJiYi04NDdhLWQ5NDRiZmFlOGRiMCIsImMiOjR9"_blank"><p>Indicadores de Compromiso de Gestion FED</p></a>
             </div>
 
             
