crea boletin estadistico 2023

--- a/principal/templates/index.html
+++ b/principal/templates/index.html
@@ -108,8 +108,14 @@
 
             <div class="address">
               <i class="bi bi-book"></i>
-              <h4>Boletin Estadistico</h4>
+              <h4>Boletin Estadistico 2022</h4>
                 <a href="https://drive.google.com/file/d/171E7kS6n46kMnQmDwaExfKTt0wQDLGYK/view?usp=sharing" target="_blank"><p>Boletin Estadistico 2022</p></a>
+            </div>
+
+            <div class="address">
+              <i class="bi bi-book"></i>
+              <h4>Boletin Estadistico 2023</h4>
+                <a href="https://drive.google.com/file/d/1Xz5Airlq5d5fa1FsDe84qPE84zAvJAgA/view?usp=sharing" target="_blank"><p>Boletin Estadistico 2023</p></a>
             </div>
 
             <div class="address">
